# camping_cart

./: .gitignore  HH_251203_REFACTORING_SUMMARY.md  README.md  TODO_ARCH_SUMMARY.md  TODO_BRINGUP_SUMMARY.md  TODO_VIO_REFERENCE.md  lanelet2_map.osm  map_config.yaml  map_projector_info.yaml  new_lanelet2_maps.osm  new_lanelet2_maps2.osm
camping_cart_bringup/: CMakeLists.txt  README.md  package.xml
camping_cart_bringup/config/localization/: cost_params.yaml  drop_zone_matcher.yaml  drop_zones.yaml  ekf.yaml  eskf.yaml  health_monitor.yaml  kimera_bridge.yaml  localization_origin.yaml  localization_params.yaml  navsat_test_inputs.yaml  pose_selector.yaml  supervisor.yaml
camping_cart_bringup/config/map/: drop_zones.yaml  lanelet_cost_grid.yaml  map_info.yaml  map_visualization.yaml  nav2_params_costlayer_example.yaml
camping_cart_bringup/config/perception/: perception_params.yaml
camping_cart_bringup/config/planning/: centerline_snapper.yaml  compute_path_bridge.yaml  goal_snapper.yaml  nav2_lanelet.yaml  path_cost_grids.yaml
camping_cart_bringup/config/platform/: robot_visualization.yaml  vehicle_params.yaml
camping_cart_bringup/config/sensing/: radar_cost_grid.yaml  sen0592_radar.yaml  sensing_params.yaml
camping_cart_bringup/config/sensor_kit/: robot_params.yaml
camping_cart_bringup/config/sim/: fake_sensors.yaml
camping_cart_bringup/config/system/: system_checker.yaml
camping_cart_bringup/config/visualizer/: visualizer_params.yaml
camping_cart_bringup/launch/: bringup.launch.py  fake_sensors.launch.py
camping_cart_bringup/scripts/: check_config_sync.sh  fake_sensor_publisher.py
camping_cart_localization/: CMakeLists.txt  README.md  README_EKF.md  package.xml
camping_cart_localization/config/: cost_params.yaml  ekf.yaml  health_monitor.yaml  kimera_bridge.yaml  localization_origin.yaml  localization_params.yaml  navsat_test_inputs.yaml  pose_selector.yaml
camping_cart_localization/launch/: localization.launch.py
camping_cart_localization/msg/: LocalizationDiagnostics.msg  LocalizationMode.msg  LocalizationStatus.msg
camping_cart_localization/src/: drop_zone_matcher_node.cpp  localization_eskf_node.cpp  localization_health_monitor_node.cpp  localization_pose_selector_node.cpp  localization_supervisor_node.cpp  navsat_to_pose_node.cpp  odometry_to_pose_node.cpp  pose_cov_bridge_node.cpp  wheel_odometry_bridge_node.cpp
camping_cart_map/: CMakeLists.txt  README.md  README_cost_layer.md  package.xml  plugin_cost_map.xml
camping_cart_map/config/: lanelet_cost_grid.yaml  map_info.yaml  nav2_params_costlayer_example.yaml
camping_cart_map/include/camping_cart_map/: custom_regulatory_elements.hpp  lanelet2_map_loader.hpp  lanelet2_map_node.hpp
camping_cart_map/launch/: drop_zone_export.launch.py  lanelet2_map.launch.py  map.launch.py
camping_cart_map/rviz/: README_dark_theme.md  autoware_full_ref.rviz  camping_cart_autoware_full.rviz  camping_cart_autoware_like.rviz  camping_cart_dark.rviz  dark_theme.qss
camping_cart_map/src/: cost_field_marker_node.cpp  cost_field_node.cpp  drop_zone_exporter_node.cpp  lanelet2_map_loader.cpp  lanelet2_map_node.cpp
camping_cart_map/src/cost_map/: lanelet_cost_grid_node.cpp  lanelet_cost_layer.cpp
camping_cart_planning/: CMakeLists.txt  README.md  package.xml
camping_cart_planning/config/: centerline_snapper.yaml  compute_path_bridge.yaml  goal_replanner.yaml  goal_snapper.yaml  nav2_lanelet.yaml  path_cost_grids.yaml
camping_cart_planning/config/bt/: navigate_to_pose_w_planner_selector.xml
camping_cart_planning/launch/: nav2_lanelet.launch.py  path_cost_grids.launch.py  planning.launch.py
camping_cart_planning/src/: centerline_snapper_node.cpp  compute_path_bridge_node.cpp  goal_replanner_node.cpp  goal_snapper_node.cpp
camping_cart_platform/: CMakeLists.txt  README.md  package.xml
camping_cart_platform/config/: vehicle_params.yaml
camping_cart_platform/launch/: platform.launch.py
camping_cart_platform/src/: robot_visualization_node.cpp
camping_cart_sensing/: CMakeLists.txt  README.md  package.xml
camping_cart_sensing/config/: microstrain_cv7.yaml  microstrain_gq7.yaml  ntrip_client.yaml  sen0592_radar.yaml  sensing_params.yaml  zed_f9p_rover.yaml
camping_cart_sensing/launch/: camera.launch.py  gnss.launch.py  imu.launch.py  imu_ntrip.launch.py  lidar.launch.py  lidar_concat.launch.py  platform_velocity_converter.launch.py  radar.launch.py  sensing.launch.py
camping_cart_sensing/src/: camera_preprocessor_node.cpp  lidar_preprocessor_node.cpp  platform_velocity_converter_node.cpp  radar_cost_grid_node.cpp  sen0592_radar_node.cpp
camping_cart_sensor_kit/: CMakeLists.txt  README.md  package.xml
camping_cart_sensor_kit/config/: robot_params.yaml
camping_cart_sensor_kit/include/camping_cart_sensor_kit/: robot_params.hpp
camping_cart_sensor_kit/launch/: sensor_kit.launch.py
camping_cart_sensor_kit/msg/: RobotInfo.msg
camping_cart_sensor_kit/src/: robot_params.cpp
camping_cart_sensor_kit/urdf/: camping_cart_sensor_kit.xacro
camping_cart_system/: CMakeLists.txt  README.md  package.xml
camping_cart_system/config/: system_checker.yaml
camping_cart_system/launch/: system_checker.launch.py
camping_cart_system/scripts/: system_checker_node.py
camping_cart_visualizer/: CMakeLists.txt  README.md  package.xml
camping_cart_visualizer/config/: visualizer_params.yaml
camping_cart_visualizer/launch/: visualizer.launch.py
camping_cart_visualizer/src/: cost_field_marker_node.cpp  cost_field_node.cpp  robot_visualization_node.cpp
src/camping_cart_common/: CMakeLists.txt  package.xml
src/camping_cart_common/config/: robot_params.yaml
src/camping_cart_common/msg/: RobotInfo.msg  RobotSpecifications.msg
src/camping_cart_common/src/: robot_info_node.cpp  robot_params.cpp
src/camping_cart_map/: CMakeLists.txt  package.xml
src/camping_cart_map/config/: map_info.yaml
src/camping_cart_map/src/: lanelet2_map_loader.cpp  lanelet2_map_node.cpp
src/camping_cart_planning/: CMakeLists.txt  README.md  package.xml
src/camping_cart_planning/launch/: global_planner.launch.py
(+30 files in other folders)
