<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camping_cart_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hwanhong57@gmail.com">hong</maintainer>
  <!-- HH_260114 Set explicit Apache license. -->
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros2launch</depend>
  <depend>rclpy</depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <!-- HH_260109 Launch-time dependencies for fused localization and sensing pipeline. -->
  <exec_depend>camping_cart_sensor_kit</exec_depend>
  <exec_depend>camping_cart_localization</exec_depend>
  <exec_depend>camping_cart_map</exec_depend>
  <exec_depend>camping_cart_planning</exec_depend>
  <exec_depend>camping_cart_sensing</exec_depend>
  <exec_depend>camping_cart_platform</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
