<?xml version="1.0"?>
<package format="3">
  <name>camping_cart_localization</name>
  <version>0.1.0</version>
  <description>GNSS + IMU based localization nodes</description>

  <maintainer email="hwanhong57@gmail.com">hong</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build & exec dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>rosidl_default_runtime</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>python3-dev</build_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>python3</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <!-- HH_260113 Explicitly mark ament_cmake build to generate correct env hooks. -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
