<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camping_cart_platform</name>
  <version>0.0.0</version>
  <description>Platform/CAN integration for camping cart.</description>
  <maintainer email="hwanhong57@gmail.com">hong</maintainer>
  <!-- HH_260114 Set explicit Apache license. -->
  <license>Apache-2.0</license>
  <!-- HH_260109 New package for vehicle/CAN data such as wheel odometry. -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>camping_cart_sensor_kit</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
