<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camping_cart_sensing</name>
  <version>0.0.0</version>
  <description>LiDAR/Camera preprocessing and velocity conversion for camping cart.</description>
  <maintainer email="hwanhong57@gmail.com">hong</maintainer>
  <!-- HH_260114 Set explicit Apache license. -->
  <license>Apache-2.0</license>
  <!-- HH_260109 New sensing package for LiDAR/Camera preprocessing and runtime sensor interfaces. -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
