<?xml version="1.0"?>
<package format="3">
  <name>camping_cart_system</name>
  <version>0.0.0</version>
  <description>System checker tools for camping cart bringup.</description>
  <maintainer email="hwanhong57@gmail.com">hong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
