<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camping_cart_visualizer</name>
  <version>0.0.0</version>
  <description>Visualization-only nodes for camping cart (markers, RViz helpers).</description>
  <maintainer email="hwanhong57@gmail.com">hong</maintainer>
  <!-- HH_260114 Set explicit Apache license. -->
  <license>Apache-2.0</license>
  <!-- HH_260109 Extract visualization nodes into a dedicated package. -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>camping_cart_map</depend>
  <depend>camping_cart_sensor_kit</depend>
  <!-- HH_260109 Remove bringup dependency to avoid circular build ordering. -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
