<?xml version="1.0"?>
<package format="3">
  <name>camping_cart_map</name>
  <version>0.0.1</version>
  <description>Lanelet2-based map loader and visualization for camping cart robot</description>

  <maintainer email="your_email@example.com">hong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_depend>lanelet2_core</build_depend>
  <build_depend>lanelet2_io</build_depend>
  <build_depend>lanelet2_projection</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>lanelet2_core</exec_depend>
  <exec_depend>lanelet2_io</exec_depend>
  <exec_depend>lanelet2_projection</exec_depend>

  <export>
  </export>
</package>
